Feature/show hide screen (#87)
* add links to menu items and icons

* adjust borders in header

* add todo list

* more tweeks to colour scheme

* add missing pages and routes

* remove todo and switch to github issues

* adjust tsconfig to support tsx

* adjust form rendering height

* abstract out screen table

* load default list of screens when empty

* fix prettier v3 plugin config issues

* add about page

* add version to footer, redo root>main layout, refactor theme switcher to toggle button

* theme toggle transition animation

* mobile menu in header and reduced version number in footer

* tweek pulldown nav

* refactor api from favorite to show

* address sonar lint issues

* adjust screen width calculation for screen comparison

* switch favorite icon to checkbox

* prevent refetch on window focus

* adjust css on checkbox
