# openApi/screenApi.v1.yaml
@@ -242,7 +242,7 @@ paths:
                 type: string
           content: {}
       operationId: 'optionsCreateScreenAction'
-  /screen/{id}/favorite:
+  /screen/{id}/show:
     patch:
       tags:
         - 'screen action service'
@@ -304,7 +304,7 @@ paths:
       security:
         - authorizer-api-v2: []
         - api_key: []
-      operationId: 'favoriteScreenAction'
+      operationId: 'showScreenAction'
     options:
       parameters:
         - name: 'id'
@@ -326,7 +326,7 @@ paths:
               schema:
                 type: string
           content: {}
-      operationId: 'optionsFavoriteScreenAction'
+      operationId: 'optionsShowScreenAction'
   /screen/{id}:
     get:
       tags:
@@ -576,13 +576,13 @@ components:
         - 'tag'
         - 'data'
         - 'color'
-        - 'favorite'
+        - 'visible'
       type: object
       properties:
         id:
           type: string
           minLength: 1
-        favorite:
+        visible:
           type: boolean
         tag:
           $ref: '#/components/schemas/ScreenTag'
